--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /data
 /ml_model/wandb
 /ml_model/bertforseqclass_trained_models
+/ml_model/bertforsequenceclassification
 /ml_model/output
 
 /reviews_classification.egg-info
